--- a/netflix&chill.html
+++ b/netflix&chill.html
@@ -5,8 +5,8 @@
 <header><h1>Major Socializing Issue</h1>
     <div>
     <ul class="menu">
-        <li><a href="/freeCodeCampRewatches/White Wine Wineries/lounge.html#about">About Us</a></li>
-        <li><a href="/freeCodeCampRewatches/White Wine Wineries/lounge.html#MEN">Selection of Wines</a></li>
+        <li><a href="/freeCodeCampRewatches/White Wine Wineries/index.html#about">About Us</a></li>
+        <li><a href="/freeCodeCampRewatches/White Wine Wineries/index.html#MEN">Selection of Wines</a></li>
         <li><a href="time.html">Schedule</a></li>
         <li><a href="lounge.html">Central Lounge</a></li>
         
