--- a/time.html
+++ b/time.html
@@ -6,8 +6,8 @@
     <div>
     
     <ul class="menu">
-        <li><a href="/freeCodeCampRewatches/White Wine Wineries/lounge.html#about">About Us</a></li>
-        <li><a href="/freeCodeCampRewatches/White Wine Wineries/lounge.html#MEN">Selection of Wines</a></li>
+        <li><a href="/freeCodeCampRewatches/White Wine Wineries/index.html">About Us</a></li>
+        <li><a href="/freeCodeCampRewatches/White Wine Wineries/index.html">Selection of Wines</a></li>
         <li><a href="lounge.html">Central Lounge</a></li>
         <li><a href="netflix&chill.html">Get in Touch</a></li>
     </ul>
