--- a/netflix&chill.html
+++ b/netflix&chill.html
@@ -5,10 +5,10 @@
 <header><h1>Major Socializing Issue</h1>
     <div>
     <ul class="menu">
-        <li><a href="lounge.html#about">About Us</a></li>
-        <li><a href="lounge.html#MEN">Selection of Wines</a></li>
+        <li><a href="index.html#about">About Us</a></li>
+        <li><a href="index.html#MEN">Selection of Wines</a></li>
         <li><a href="time.html">Schedule</a></li>
-        <li><a href="lounge.html">Central Lounge</a></li>
+        <li><a href="index.html">Central Lounge</a></li>
         
     </ul>
     </div>
