--- a/time.html
+++ b/time.html
@@ -6,9 +6,9 @@
     <div>
     
     <ul class="menu">
-        <li><a href="lounge.html#about">About Us</a></li>
-        <li><a href="lounge.html#MEN">Selection of Wines</a></li>
-        <li><a href="lounge.html">Central Lounge</a></li>
+        <li><a href="index.html#about">About Us</a></li>
+        <li><a href="index.html#MEN">Selection of Wines</a></li>
+        <li><a href="index.html">Central Lounge</a></li>
         <li><a href="netflix&chill.html">Get in Touch</a></li>
     </ul>
     </div>
