--- a/netflix&chill.html
+++ b/netflix&chill.html
@@ -30,7 +30,7 @@
             (+63) 314 159 2653
         </b>
     </fieldset>
-    <a href="/freeCodeCampRewatches/White Wine Wineries/netflix&chill.html#contact"><button>Submit</button></a><button>The last button did absolutely nothing</button>
+    <a href="netflix&chill.html#contact"><button>Submit</button></a><button>The last button did absolutely nothing</button>
 
 
 <br><br><br>
